# synesis

./: .dockerignore  .env.docker  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.claude/: README.md  settings.json
.claude/agents/: code-architecture-reviewer.md  code-reviewer.md  context-writer.md  documentation-architect.md  refactor-planner.md  web-research-specialist.md
.claude/commands/: feature-done.md  feature-next.md  feature-plan.md  project-init.md  skill-generate.md  skill-improve.md  validate_cmd.md
.claude/hooks/: skill-activation-prompt.sh
.claude/skills/: skill-rules.json
.github/: issue_fix_prompt.md  pr_review_prompt.md  pull_request_template.md
.github/workflows/: claude-fix.yml  claude-review.yml  claude_code_review.yml  codex-fix.yml  codex-review.yml  release-notes.yml
data/: us_tickers.json
data/lexicons/: base_lexicon.json  finance_lexicon.json
database/: init.sql
docs/: ARCHITECTURE.md  POLYMARKET.md  PRD.md  TG_accts.md  X_accts.md  multi-agent-prd.md  strategy1.md  strategy2.md  strategy4.md  twitterplan.md
docs/_archive/: PRD-old.md
docs/kg/: _compile_log.md  _index.md
docs/strategy/: strategy1.md  strategy3.md
output/signals/: signals_2026-02-03.jsonl  signals_2026-02-04.jsonl
scripts/: _scripts_context.md  get_telegram_chat_id.py  smoke_test_sec_edgar.py  test_factset_regions.py  test_finnhub.py  test_finnhub_symbol.py  test_google_rss.py  test_impact_scorer.py  test_reddit_rss.py  test_sec_edgar.py  test_sentiment.py  test_sentiment_telegram.py  test_telegram.py  test_telegram_format.py  test_ticker_extraction.py  test_twitterapi.py  test_twitterapi_stream.py  verify_factset_docs.py  verify_factset_provider.py
searxng/: settings.yml
src/synesis/: __init__.py  cli.py  config.py  config_cache.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_company_agent.py  test_event_radar_e2e.py  test_factset_integration.py  test_google_rss.py  test_macro_strategist.py  test_mkt_intel_e2e.py  test_news_e2e.py  test_price_analyst.py  (+4 more)
(+490 files in other folders)
