[project]
name = "synesis"
version = "0.1.0"
description = "Real-time financial news analysis and prediction market trading system"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # Async HTTP
    "httpx>=0.28.0",
    "websockets>=14.0",
    # Database (raw asyncpg for speed, no ORM overhead)
    "asyncpg>=0.30.0",
    # Redis
    "redis[hiredis]>=5.2.0",
    # Configuration & Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Logging
    "structlog>=24.4.0",
    # Telegram
    "telethon>=1.37.0",
    # LLM (PydanticAI for structured outputs + model flexibility)
    "pydantic-ai>=0.1.0",
    # Polymarket
    "py-clob-client>=0.1.0",
    "eth-account>=0.13.0",
    # Vector/Embeddings (for deduplication)
    "pgvector>=0.3.6",
    # Utilities
    "python-dotenv>=1.0.1",
    "tenacity>=9.0.0",
    "orjson>=3.10.0",
    "semhash>=0.4.1",
    "model2vec>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "httpx>=0.28.0",  # For TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synesis"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "asyncpg.*",
    "telethon.*",
    "py_clob_client.*",
    "redis.*",
    "pydantic_ai.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.13",
]
